<resources>
    <string name="app_name">frend.ly</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Search</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_search">Search</string>
    <string name="name_string">Name:</string>
    <string name="interests_string">Interests</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="nearby">Nearby</string>
    <string name="disconnect">disconnect</string>
    <string name="connect">connect</string>
    <string name="hobbies">Hobbies</string>
    <string name="clear">Clear</string>
    <string name="set">Set</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="load">Load</string>
</resources>